working on figuring out how i want the bookmark lists to work
also moved the logout to a delete route and going to ditch the get

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -192,3 +192,8 @@ Style/HashTransformKeys:
 
 Style/HashTransformValues:
   Enabled: true
+
+
+Lint/MissingSuper:
+  Exclude:
+    - app/components/*
