--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
     "postcss": "^8.2.1",
+    "postcss-easy-import": "^3.0.0",
     "postcss-loader": ">=4.0.3",
+    "postcss-nested": "^5.0.3",
     "prettier": "^2.0.2",
     "stimulus": "^2.0.0",
     "tailwindcss": "^2.0.2",
