--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev-server": "bundle exec bin/webpack-dev-server"
   },
   "dependencies": {
+    "@hotwired/turbo": "^7.0.0-beta.5",
+    "@hotwired/turbo-rails": "^7.0.0-beta.5",
     "@rails/ujs": "^6.1.0",
     "@rails/webpacker": "5.2.1",
     "@tailwindcss/forms": "^0.2.1",
@@ -16,8 +18,7 @@
     "postcss-nested": "^5.0.3",
     "prettier": "^2.0.2",
     "stimulus": "^2.0.0",
-    "tailwindcss": "^2.0.2",
-    "turbolinks": "^5.2.0"
+    "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
