--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,8 @@ inherit_from:
   - .rubocop_todo.yml
 
 AllCops:
-  TargetRubyVersion: 2.7
+  TargetRubyVersion: 3.0.1
+  NewCops: enable
   DisplayCopNames: true
   DisplayStyleGuide: true
   SuggestExtensions: false
