--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "@hotwired/turbo": "^7.0.0-beta.5",
     "@hotwired/turbo-rails": "^7.0.0-beta.5",
     "@rails/ujs": "^6.1.0",
-    "@rails/webpacker": "5.2.1",
+    "@rails/webpacker": "5.4.3",
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
     "postcss": "^8.2.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": ">=4.0.3",
     "postcss-nested": "^5.0.3",
-    "prettier": "^2.0.2",
     "stimulus": "^2.0.0",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "webpack-dev-server": "^3.11.0"
   }
 }
