--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,15 +27,15 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Set up Ruby 2.7
+      - name: Set up Ruby 3.0.1
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: 2.7.x
+          ruby-version: 3.0.1
 
-      - name: Set up Node 12.8
+      - name: Set up Node 16.10.0
         uses: actions/setup-node@v1
         with:
-          node-version: 12.8.x
+          node-version: 16.10.0
 
       - name: Install libraries
         run: |
