--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -28,27 +28,21 @@ jobs:
           - 6379/tcp
 
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Set up Ruby 3.0.1
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 3.0.1
-
-      - name: Set up Node 16.10.0
-        uses: actions/setup-node@v1
-        with:
-          node-version: 16.10.0
+      - uses: actions/checkout@v2
 
       - name: Install libraries
         run: |
           sudo apt-get update
           sudo apt-get install -y postgresql-client libpq-dev sqlite3 libsqlite3-dev
 
-      - name: Install deps
-        run: |
-          bundle install
-          yarn install
+      - uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'yarn'
 
       - name: Setup Database
         run: |
