--- a/.github/workflows/styles.yml
+++ b/.github/workflows/styles.yml
@@ -13,7 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+
+      - uses: ruby/setup-ruby@v1
+        #with:
+          #bundler-cache: true
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'yarn'
 
       - name: Set up Ruby 3.0.1
         uses: actions/setup-ruby@v1
