--- a/.github/workflows/styles.yml
+++ b/.github/workflows/styles.yml
@@ -12,12 +12,16 @@ jobs:
   Rubocop:
     runs-on: ubuntu-latest
 
+    env:
+      BUNDLE_WITHOUT=production
+      BUNDLER_WITH=ci
+
     steps:
       - uses: actions/checkout@v2
 
       - uses: ruby/setup-ruby@v1
-        #with:
-          #bundler-cache: true
+        with:
+          bundler-cache: true
 
       - uses: actions/setup-node@v2
         with:
@@ -29,9 +33,9 @@ jobs:
         with:
           ruby-version: 3.0.1
 
-      - name: Install deps
-        run: |
-          gem install rubocop rubocop-rspec rubocop-rails
+      #- name: Install deps
+        #run: |
+          #gem install rubocop rubocop-rspec rubocop-rails
 
       - name: Run rubocop
         run: |
