--- a/.github/workflows/styles.yml
+++ b/.github/workflows/styles.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      BUNDLE_WITHOUT: production
+      BUNDLE_WITHOUT: production,development,test
       BUNDLER_WITH: ci
 
     steps:
@@ -23,11 +23,6 @@ jobs:
         with:
           bundler-cache: true
 
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-          cache: 'yarn'
-
       - name: Run rubocop
         run: |
           bundle exec rubocop
@@ -36,12 +31,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
-      - name: Set up Node 16.10.0
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: 16.10.0
+          node-version: '16'
+          cache: 'yarn'
 
       - name: Install deps
         run: |
