--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,13 @@
 name: Build
 
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - '*'
+
 jobs:
   DockerBuild:
     runs-on: ubuntu-latest
