--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,18 +75,14 @@ jobs:
       - name: Build Image
         run: |
           docker build \
-            -t docker.pkg.github.com/transientbug/transientbug-rails/app:latest \
-            -t docker.pkg.github.com/transientbug/transientbug-rails/app:${GITHUB_SHA} \
+            -t https://ghcr.io/transientbug/transientbug-rails/app:latest \
+            -t https://ghcr.io/transientbug/transientbug-rails/app:${GITHUB_SHA} \
             -f Dockerfile .
 
       - name: Login to GitHub Docker Registry
-        run: |
-          docker login docker.pkg.github.com --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
-        env:
-          DOCKER_USERNAME: ${{ secrets.GITHUB_DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.GITHUB_DOCKER_PASSWORD }}
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Push to GitHub Docker Registry
         run: |
-          docker push docker.pkg.github.com/transientbug/transientbug-rails/app:latest
-          docker push docker.pkg.github.com/transientbug/transientbug-rails/app:${GITHUB_SHA}
+          docker push https://ghcr.io/transientbug/transientbug-rails/app:latest
+          docker push https://ghcr.io/transientbug/transientbug-rails/app:${GITHUB_SHA}
