--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
   "name": "transientbug",
-  "private": true,
-  "scripts": {
-    "lint": "eslint 'app/javascript/'",
-    "dev-server": "bundle exec bin/webpack-dev-server"
-  },
+  "private": "true",
   "dependencies": {
-    "@hotwired/turbo": "^7.0.0-beta.5",
-    "@hotwired/turbo-rails": "^7.0.0-beta.5",
-    "@rails/ujs": "^6.1.0",
-    "@rails/webpacker": "5.4.3",
-    "@tailwindcss/forms": "^0.2.1",
-    "autoprefixer": "^10.1.0",
-    "postcss": "^8.2.1",
-    "postcss-easy-import": "^3.0.0",
-    "postcss-loader": ">=4.0.3",
-    "postcss-nested": "^5.0.3",
-    "stimulus": "^2.0.0",
-    "tailwindcss": "^2.2.19"
+    "@hotwired/stimulus": "^3.0.1",
+    "@hotwired/turbo-rails": "^7.1.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@tailwindcss/forms": "^0.4.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "postcss-cli": "^9.1.0",
+    "rollup": "^2.67.0",
+    "tailwindcss": "^3.0.18"
   },
   "devDependencies": {
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4",
-    "webpack-dev-server": "^3.11.0"
+    "eslint-plugin-import": "^2.25.4"
+  },
+  "scripts": {
+    "lint": "eslint 'app/javascript/'",
+    "build": "rollup -c rollup.config.js",
+    "build:css": "postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css && postcss ./app/assets/stylesheets/admin.postcss.css -o ./app/assets/builds/admin.css"
   }
 }
