--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Build Docs
         run: |
-          bundle exec rake docs:generate
+          bundle exec rails docs:generate
         env:
           DATABASE_URL: postgresql://postgres:@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
           REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
@@ -61,7 +61,7 @@ jobs:
 
       - name: Build Assets
         run: |
-          bundle exec rake assets:precompile
+          bundle exec rails assets:precompile
         env:
           DATABASE_URL: postgresql://postgres:@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
           REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
