reworking docker setup to see if i can make it easier to debug why the new 3.1 images don't want to find gems or assets

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,24 @@
-.git
-.dockerignore
-.byebug_history
 log/*
 tmp/*
-.*.swp
-node_modules/*
-storage/*
-spec/*
-./.*
+**/*.swp
+**/*.swo
+**/\.*
+!.dockerignore
+**/*.*.*~
+**/*.key
+
+node_modules/
+storage/
+spec/
 coverage/
+public/packs-test
+node_modules/
+coverage/
+
+*.db
+*.local
+
+docker/
+!docker/entrypoint.sh
+
+README.md
