--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "private": "true",
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
-    "@hotwired/turbo-rails": "^7.1.1",
+    "@hotwired/turbo-rails": "^7.1.1"
+  },
+  "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^3.0.1",
     "@tailwindcss/forms": "^0.4.0",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "postcss": "^8.4.6",
     "postcss-cli": "^9.1.0",
     "rollup": "^2.67.0",
     "tailwindcss": "^3.0.18"
   },
-  "devDependencies": {
-    "eslint": "^8.8.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4"
-  },
   "scripts": {
     "lint": "eslint 'app/javascript/'",
     "build": "rollup -c rollup.config.js",
-    "build:css": "postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css && postcss ./app/assets/stylesheets/admin.postcss.css -o ./app/assets/builds/admin.css"
+    "build:css": "postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css"
   }
 }
