--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "private": "true",
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
-    "@hotwired/turbo-rails": "^7.1.1"
-  },
-  "devDependencies": {
+    "@hotwired/turbo-rails": "^7.1.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^3.0.1",
     "@tailwindcss/forms": "^0.4.0",
