--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,16 +12,16 @@ jobs:
 
     services:
       postgres:
-        image: postgres:10.8
+        image: postgres:14.2
         ports:
           - 5432/tcp
         env:
           POSTGRES_USER: "postgres"
-          POSTGRES_PASSWORD: ""
+          POSTGRES_PASSWORD: "testing"
           POSTGRES_DATABASE: "transientbug_test"
 
       redis:
-        image: redis
+        image: redis:6.2.6
         ports:
           - 6379/tcp
 
