--- a/.github/workflows/styles.yml
+++ b/.github/workflows/styles.yml
@@ -24,8 +24,7 @@ jobs:
           bundler-cache: true
 
       - name: Run rubocop
-        run: |
-          bundle exec rubocop
+        run: bundle exec rubocop
 
   ESLint:
     runs-on: ubuntu-latest
@@ -39,9 +38,7 @@ jobs:
           cache: 'yarn'
 
       - name: Install deps
-        run: |
-          yarn install
+        run: yarn install
 
       - name: Run eslint
-        run: |
-          yarn lint
+        run: yarn lint
