--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,17 +2,18 @@ version: "3"
 
 services:
   postgres:
-    image: "postgres:9.6-alpine"
+    image: "postgres:14.2-alpine"
     environment:
       POSTGRES_USER: "transientbug"
       POSTGRES_PASSWORD: "yourpassword"
+      POSTGRES_DB: "transientbut_production"
     networks:
       - "services"
     volumes:
       - "postgres:/var/lib/postgresql/data"
 
   redis:
-    image: "redis:4-alpine"
+    image: "redis:6.2.6-alpine"
     networks:
       - "services"
     volumes:
@@ -30,18 +31,6 @@ services:
       - "services"
     env_file:
       - ".env.production"
-
-  #clockwork:
-    #image: "ghcr.io/transientbug/transientbug-rails/app:latest"
-    #depends_on:
-      #- "postgres"
-      #- "redis"
-      #- "sidekiq"
-    #command: ["bundle exec clockwork clock.rb"]
-    #networks:
-      #- "services"
-    #env_file:
-      #- ".env.production"
 
   rails:
     image: "ghcr.io/transientbug/transientbug-rails/app:latest"
@@ -80,7 +69,8 @@ services:
 
 volumes:
   redis:
-  postgres:
+  #postgres:
+  postgres_14:
 
 networks:
   exposed:
