--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -30,8 +30,6 @@ jobs:
     env:
       RAILS_ENV: test
       NODE_ENV: test
-      DATABASE_URL: postgresql://postgres:testing@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
-      REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
 
     steps:
       - uses: actions/checkout@v2
@@ -52,8 +50,13 @@ jobs:
 
       - name: Setup Database
         run: bundle exec rails db:prepare
+        env:
+          DATABASE_URL: postgresql://postgres:testing@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
+          REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
 
       - name: Run specs
         run: bundle exec rails spec
         env:
+          DATABASE_URL: postgresql://postgres:testing@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
+          REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
