update build for pg password

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           bundle exec rails db:prepare
         env:
-          DATABASE_URL: postgresql://postgres:@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
+          DATABASE_URL: postgresql://postgres:testing@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
           REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
           RAILS_ENV: test
           NODE_ENV: test
@@ -55,7 +55,7 @@ jobs:
         run: |
           bundle exec rails docs:generate
         env:
-          DATABASE_URL: postgresql://postgres:@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
+          DATABASE_URL: postgresql://postgres:testing@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
           REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
           RAILS_ENV: test
           NODE_ENV: test
@@ -64,7 +64,7 @@ jobs:
         run: |
           bundle exec rails assets:precompile
         env:
-          DATABASE_URL: postgresql://postgres:@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
+          DATABASE_URL: postgresql://postgres:testing@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
           REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
           RAILS_ENV: production
           NODE_ENV: production
