--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,3 +9,11 @@ test:
 dropzone:
   service: Disk
   root: /dropzone
+
+digitalocean:
+  service: S3
+  endpoint: https://nyc3.digitaloceanspaces.com
+  access_key_id: <%= Rails.application.credentials.dig(:digital_ocean, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:digital_ocean, :secret_access_key) %>
+  region: "nyc3"
+  bucket: "transientbug-assets"
