scripts and temp local work to for transfering storage and updating the db
cleanup scripts and handle making sure the dumped db is in a good state locally to upload to fly

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,7 +8,8 @@ test:
 
 dropzone:
   service: Disk
-  root: /dropzone
+  #root: /dropzone
+  root: <%= Rails.root.join("storage") %>
 
 digitalocean:
   service: S3
@@ -17,3 +18,9 @@ digitalocean:
   secret_access_key: <%= Rails.application.credentials.dig(:digital_ocean, :secret_access_key) %>
   region: "nyc3"
   bucket: "transientbug-assets"
+
+mirror:
+  service: Mirror
+  primary: local
+  mirrors:
+    - digitalocean
