yeah thats just a terrible rubocop style
the last comma makes it easy to expand the list/hash without causing a change to the above line by adding the comma

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -197,3 +197,6 @@ Style/HashTransformValues:
 Lint/MissingSuper:
   Exclude:
     - app/components/*
+
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: consistent_comma
