--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - env:
+      - name: Deploy to fly.io
+        env:
           super_secret: ${{ secrets.RAILS_MASTER_KEY }}
         run: flyctl deploy
