small tweaks to install the flyctrl util

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,22 @@
 name: Deploy
 
 on:
+  pull_request:
+    branches:
+      - '*'
   push:
     branches:
       - master
 
 jobs:
-  Rubocop:
+  FlyioDeploy:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+      - uses: superfly/flyctl-actions/setup-flyctl@master
 
       - name: Deploy to fly.io
         env:
-          super_secret: ${{ secrets.RAILS_MASTER_KEY }}
-        run: flyctl deploy
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        run: flyctl deploy --remote-only
