wrong docs generate command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,17 +37,17 @@ jobs:
           cache-version: 1
 
       - name: Setup Database
-        run: bundle exec rails db:prepare
         env:
           DATABASE_URL: postgresql://postgres:testing@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
           REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
+        run: ./bin/rails db:prepare
 
       - name: Build API docs
-        run: bundle exec rails spec
         env:
           DATABASE_URL: postgresql://postgres:testing@localhost:${{ job.services.postgres.ports['5432'] }}/transientbug_test
           REDIS_URL: redis://localhost:${{ job.services.redis.ports['6379'] }}/0
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+        run: ./bin/rails docs:generate
 
       - name: Deploy to fly.io
         env:
